--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "apeal cat",
+    "name": "Quora Appeal",
     "version": "1.0.0",
     "description": "apeal quora answer",
     "manifest_version": 3,
